fixed spacing to my liking

--- a/star-wars-chracters/styles.css
+++ b/star-wars-chracters/styles.css
@@ -18,5 +18,5 @@
 }
 
 figure img {
-    max-height: 12rem;
+    max-height: 13rem;
 }
